# RTAI

./: .gitignore  ChangeLog  GNUmakefile.am  Kconfig  README.BIOS  README.CONF_RMRKS  README.INSTALL  README.ISOLCPUS  README.LINUX_SERVER  README.LXRT_EXTS_IN_USE  README.RTNET  README.SMI  README.md  autogen.sh  configure.ac  defconfig  makefile
addons/: GNUmakefile.am
addons/comedi/: GNUmakefile.am  Makefile.kbuild  README  kcomedi-module.c  kcomedi.c  rtai_comedi.h
addons/cpp/: GNUmakefile.am  bits.cc  bits.h  bits_init.c  builtin.c  cond.cc  cond.h  count.cc  count.h  crt.c  cs.cc  init.c  iostream.cc  iostream.h  linux_wrapper.c  linux_wrapper.h  mbx.cc  mbx.h  module.cc  module.h  mutex.cc  mutex.h  new.h  rtai_cpp.h  rtai_pqueue_wrapper.h  rtai_pthread_int_wrapper.h  rtai_pthread_wrapper.h  rtai_wrapper.c  rtai_wrapper.h  rtf.cc  rtf.h  rtf_init.c  sem.cc  sem.h  task.cc  task.h  tbx.cc  tbx.h  tbx_init.c  time.cc  (+8 more)
addons/drivers/: GNUmakefile.am
addons/rtdm/: GNUmakefile.am  Makefile.kbuild  core.c  device.c  drvlib.c  internal.h  module.c  proc.c  rtai_taskq.c  rtai_taskq.h  rtdm.h  rtdm_driver.h  rtserial.h  select.c  select.h  vfile.c  vfile.h  xn.h
arch/x86/: Kconfig  defconfig
base/: GNUmakefile.am
base/arch/: GNUmakefile.am
base/include/: GNUmakefile.am  rtai.h  rtai_bits.h  rtai_defs.h  rtai_defs.h.in  rtai_fifos.h  rtai_hal_names.h  rtai_leds.h  rtai_lxrt.h  rtai_math.h  rtai_mbx.h  rtai_mq.h  rtai_names.h  rtai_netrpc.h  rtai_pmq.h  rtai_posix.h  rtai_proc_fs.h  rtai_registry.h  rtai_rwl.h  rtai_sanity.h  rtai_sched.h  rtai_schedcore.h  rtai_sem.h  rtai_shm.h  rtai_tasklets.h  rtai_taskq.h  rtai_tbx.h  rtai_trace.h  rtai_usi.h  rtai_wd.h  rtai_wrappers.h  rtdm.h  select.h  xn.h
base/ipc/: GNUmakefile.am
base/malloc/: GNUmakefile.am  Makefile.kbuild  malloc.c
base/math/: .libm.o.d  GNUmakefile.am  Makefile.kbuild  README.KLIBM  e_fmax.c  e_fmin.c  export_glibc.h  export_musl.h  export_newlib.h  export_uclibc.h  libm.c  mathP.h
base/posix/: GNUmakefile.am  Makefile.kbuild  POSIX_WRAPS  README
base/sched/: GNUmakefile.am  Makefile.kbuild  api.c  kvmem.c  sched.c  shm.c  signal.c  sys.c
base/scripts/: GNUmakefile.am  bootstrap  mode-control  rtai-config.in  rtai-info  rtai-load.in
base/tasklets/: GNUmakefile.am  Makefile.kbuild  README  tasklets.c
base/trace/: GNUmakefile.am  trace.c
base/usi/: GNUmakefile.am  Makefile.kbuild  README  usi.c
base/wd/: GNUmakefile.am  Makefile.kbuild  wd.c
debian/: .gitignore  changelog  configure  control.in  rules.in  update-dch-from-git
doc/: GNUmakefile.am  LICENSE.generated_files  Linux-syscalls-servers.txt  User-Manual.txt  install-dist.rules
doc/doxygen/: Doxyfile.in  GNUmakefile.am  fifos_overview.dox  lxrt.dox  lxrt_faq.dox  schedulers_overview.dox
doc/maintainers/: autoconf.txt  build-system.txt  compiler.txt  doc-framework.txt  runinfo.txt
include/: GNUmakefile.am  rtai_lxrt.h  rtai_malloc.h  rtai_math.h  rtai_msg.h  rtai_nam2num.h  rtai_prinher.h  rtai_proxies.h  rtai_scb.h  rtai_sched.h  rtai_schedcore.h  rtai_sem.h  rtai_shm.h  rtai_signal.h  rtai_spl.h  rtai_trace.h  rtai_vla.h  rtai_wrappers.h
include/asm-x86/: rtai.h  rtai_atomic.h  rtai_fpu.h  rtai_hal.h  rtai_lxrt.h
ksrc/v4.14.131/: 0001-IPIPE-4.14-core-release-5.patch
ksrc/v4.14.132/: 0001-IPIPE-4.14-core-release-6.patch  0002-Convert-to-RTAI.patch  0003-Countless-Kconfig-tweaks-for-IPIPE.patch  0004-Stop-tainting-the-fucking-kernel.patch
ksrc/v4.14.134/: 0001-IPIPE-4.14-core-release-7.patch  0001-IPIPE-4.14-core-release-8.patch  0002-Convert-to-RTAI.patch  0003-Countless-Kconfig-tweaks-for-IPIPE.patch  0004-Stop-tainting-the-fucking-kernel.patch
ksrc/v4.14.148/: 0001-IPIPE-4.14-core-release-8.patch  0002-Convert-to-RTAI.patch  0003-Countless-Kconfig-tweaks-for-IPIPE.patch  0004-Allow-OOT-modules-without-tainting-kernel.patch
ksrc/v4.14.173/: 0001-IPIPE-4.14-core-release-8.patch  0002-Convert-to-RTAI.patch  0003-Countless-Kconfig-tweaks-for-IPIPE.patch  0004-Allow-OOT-modules-without-tainting-kernel.patch
ksrc/v4.14.174/: 0001-IPIPE-4.14-core-release-8.patch  0002-Convert-to-RTAI.patch  0003-Countless-Kconfig-tweaks-for-IPIPE.patch  0004-Allow-OOT-modules-without-tainting-kernel.patch
ksrc/v4.14.175/: 0001-IPIPE-4.14-core-release-8.patch  0002-Convert-to-RTAI.patch  0003-Countless-Kconfig-tweaks-for-IPIPE.patch  0004-Allow-OOT-modules-without-tainting-kernel.patch
ksrc/v4.19.114/: 0001-IPIPE-4.19-core-release-11.patch  0002-Convert-to-RTAI.patch  0003-Countless-Kconfig-tweaks-for-IPIPE.patch  0004-Allow-OOT-modules-without-tainting-kernel.patch
ksrc/v4.19.152/: 0001-IPIPE-4.19-core-release-15.patch  0002-Convert-to-RTAI.patch  0003-Countless-Kconfig-tweaks-for-IPIPE.patch  0004-Allow-OOT-modules-without-tainting-kernel.patch
ksrc/v4.19.195/: 0001-IPIPE-4.19-core-release-18.patch  0002-Convert-to-RTAI.patch  (+2 more)
linuxcnc_patches/: 0001-Fix-build-with-new-RTAI-on-Linux-4.14.131.patch  0001-Fix-build-with-new-RTAI-on-Linux-4.14.132.patch  0001-Fix-build-with-new-RTAI-on-Linux-4.14.134.patch  0001-Fix-build-with-new-RTAI-on-Linux-4.14.148.patch
rtai-lab/: Fl_ALogs_Manager.cpp  Fl_ALogs_Manager.h  Fl_Led.cpp  Fl_Led.h  Fl_Led_Window.cpp  Fl_Led_Window.h  Fl_Leds_Manager.cpp  Fl_Leds_Manager.h  Fl_Logs_Manager.cpp  Fl_Logs_Manager.h  Fl_Meter.cpp  Fl_Meter.h  Fl_Meter_Window.cpp  Fl_Meter_Window.h  Fl_Meters_Manager.cpp  Fl_Meters_Manager.h  Fl_Params_Manager.cpp  Fl_Params_Manager.h  Fl_Scope.cpp  Fl_Scope.h  Fl_Scope_Window.cpp  Fl_Scope_Window.h  Fl_Scopes_Manager.cpp  Fl_Scopes_Manager.h  Fl_Synch.cpp  Fl_Synch.h  Fl_Synch_Window.cpp  Fl_Synch_Window.h  Fl_Synchs_Manager.cpp  Fl_Synchs_Manager.h  GNUmakefile.am  INSTALL  README  README.scilab  README_X64  xrtailab.cpp  xrtailab.h
rtai-py/: GNUmakefile.am  rtai_bits.py  rtai_def.py  rtai_lxrt.py  rtai_mbx.py  rtai_msg.py  rtai_rwl.py  rtai_scb.py  rtai_sem.py  rtai_ser.py  rtai_shm.py  rtai_spl.py  rtai_wd.py
scripts/: bootstrap  rtai-config.in  rtai-load.in
src/: GNUmakefile.am
testsuite/: GNUmakefile.am  display.c  latency.c  runinfo
(+1133 files in other folders)
